--- a/index.html
+++ b/index.html
@@ -10,27 +10,31 @@
 <body>
     <div class="container">
         <section class="game">
-            <div class="player player1 active"></div>
+            <div class="player player1 active" id="player--1"></div>
             <h2>Player 1</h2>
             <div class="score" id="score--1">0</div>
             <div class="current">
                 <h3>Current</h3>
                 <div class="current-score" id="current--score--1">0</div>
             </div>
-            <div class="player player2 active"></div>
+
+            <div class="player player2" id="player--2"></div>
             <h2>Player 2</h2>
             <div class="score" id="score--2">0</div>
             <div class="current">
                 <h3>Current</h3>
                 <div class="current-score" id="current--score--2">0</div>
             </div>
+
             <div class="control">
                 <button class="btn btn-new" id="btn--new">New Game</button>
                 <img src="./img/" class="dice" id="dice">
                 <button class="btn btn-roll" id="btn--roll">Roll Dice</button>
-                <button class="btn btn-roll" id="btn--roll">Hold</button>
+                <button class="btn btn-roll" id="btn--hold">Hold</button>
             </div>
         </section>
     </div>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
