--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
           <img src="./images/dice1.png" class="dice" id="dice" />
           <button class="btn btn-roll" id="btn--roll">roll dice</button>
           <button class="btn btn-hold" id="btn--hold">hold</button>
+          <button class="btn btn-high" id="btn--high-scores">best scores</button>
         </div>
+      </section>
+      <section class="high-content hidden">
+        <ol id="high-scores"></ol>
       </section>
     </div>
   </body>
